--- a/index.html
+++ b/index.html
@@ -5,46 +5,75 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./style.css" media="screen"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Single Price Grid Component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
 <body>
-  Join our community
+      <header class="top-header">
+        <section>
+          <div class="top-content">
+            <h1 class=>Join our community</h1>
+            <h2>30-day, hassle-free money back guarantee</h2>
+            <p>Gain access to our full library of tutorials along 
+              with expert code reviews. Perfect for any developers 
+              who are serious about honing their skills.</p>
+          </div>
+        </section>
 
-  30-day, hassle-free money back guarantee
+      </header>
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
+      <main class="main-content">
+        <section>
+          <div class="middle-content">
+            <h1>Monthly Subscription</h1>
+            <h2>&dollar;29  <span>per month</span></h2>
+            <p>Full access for less than &dollar;1 a day</p>
+            <a class="button" href="#">Sign Up</a>
+          </div>
+        </section>
+      </main>
 
-  Monthly Subscription
+      <footer>
+        <div class="end-content">
+          <h1>Why Us</h1>
+          <p>Tutorials by industry experts</p>
+          <p>Peer &amp; expert code review</p>
+          <p>Coding exercises</p>
+          <p>Access to our GitHub repos</p>
+          <p>Community forum</p>
+          <p>Flashcard decks</p>
+          <p>New videos every week</p>
+        </div>
 
-  &dollar;29 per month
 
-  Full access for less than &dollar;1 a day
+      </footer>
 
-  Sign Up
 
-  Why Us
 
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
+
   
-  <footer>
+
+  
+
+
+
+
+
+  
+  
+  
+  
+  <!--<footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
     </p>
-  </footer>
+  </footer>--->
 </body>
 </html>
